[package]
name = "ctrlc"
version = "0.2.0"
authors = ["Antti Keränen <detegr@gmail.com>", "Georg Brandl <georg@python.org>"]
license = "MIT"
keywords = ["ctrlc", "signal", "SIGINT"]
description = "Easy interrupt signal handler for Rust projects"
homepage = "https://github.com/birkenfeld/rust-ctrlc"
repository = "https://github.com/birkenfeld/rust-ctrlc.git"

[dependencies]
libc = "0.1"

[dependencies.lazy_static]
version = "0.1"
optional = true

[features]
default = ["stable"]
nightly = []
stable = ["lazy_static"]
